# MRS_Project

./: README.md  tree
my_tb3_sim/: package.xml  setup.py
my_tb3_sim/config/: nav2_params_tb3_2.yaml  qos_profiles.yaml
my_tb3_sim/launch/: run_experiment.launch.py  tb3_1_system.launch.py  tb3_2_system.launch.py
my_tb3_sim/my_tb3_sim/: obstacle_info_marker.py  obstacle_info_publisher.py  (+1 more)
ros2_real/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ros2_real/config/: nav2_params.yaml  qos_profiles.yaml  slam_toolbox.yaml  tb3_1_controllers.yaml
ros2_real/launch/: gazebo.launch.py  map_merge.launch.py  pi5_robot1.launch.py  pi5_robot2.launch.py  scenario2_experiment_classic.launch.py  slam_tb3_1.launch.py  spawn_tb3s.launch.py  tb3_1_system.launch.py  tb3_2_system.launch.py
ros2_real/launch/rviz/: multi_tb3_sim.rviz  scenario2_visualization.rviz
ros2_real/maps/: my_map.pgm  my_map.yaml
ros2_real/scenario2_experiments/: analyze_all.py  analyze_v2_log.py
ros2_real/scripts/: auctioneer_node.py  bidder_node.py  evaluation_logger_v2.py  frontier_explorer.py  goal_pose_publisher.py  goal_pose_subscriber.py  goal_reached_publisher.py  hazard_zone_publisher.py  map_update_publisher.py  map_update_subscriber.py  obstacle_info_publisher.py  obstacle_info_subscriber.py  qos_utils.py  task_allocation_publisher.py
ros2_real/urdf/: common_properties.urdf  common_properties.xacro  turtlebot3_waffle_pi.urdf.xacro  turtlebot3_waffle_pi_tb3_1.urdf  turtlebot3_waffle_pi_tb3_2.urdf
ros2_real/worlds/: empty_world.world  turtlebot3_house.world  warehouse.world
(+2 files in other folders)
