<?xml version="1.0"?>
<package format="3">
  <name>my_tb3_sim</name>
  <version>0.1.0</version>
  <description>Multi-robot warehouse simulation using TurtleBot3 and Gazebo Classic</description>

  <maintainer email="dale@example.com">Dale</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_gazebo</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
